fix - invisible hr

--- a/front-end/index.css
+++ b/front-end/index.css
@@ -6,7 +6,7 @@ body {
 }
 
 hr {
-    line-height: 2px;
+    height: 2px;
     border-width: 0;
     margin-top: 0;
     margin-bottom: 5px;
